<resources>
    <string name="tracks_not_installed">nogago Tracks is required for recording, do you want to download the app?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="send_files_to_osm">Send GPX files to OSM?</string>
    <string name="gpx_visibility_txt">Visibility</string>
    <string name="gpx_tags_txt">Tags</string>
    <string name="gpx_description_txt">Description</string>
    <string name="validate_gpx_upload_name_pwd">Please specify OSM user name and password to upload GPX files.</string>
    <string name="default_buttons_support">Support</string>
	<string name="support_new_features">Support new features</string>
    <string name="show_ruler_level_descr">Display ruler on the map</string>
	<string name="show_ruler_level">Display ruler</string>
	<string name="info_button">Info</string>
	<string name="back_to_location">Back to location</string>
	<string name="help">Help</string>
    <string name="show_details">Show details</string>
	<string name="accessibility_extensions_descr">Accessibility extensions for old Android versions</string>
	<string name="accessibility_extensions">Accessibility extensions</string>
	<string name="accessibility_mode">Accessibility mode</string>
	<string name="accessibility_mode_descr">Turns on the accessibility features</string>
	<string name="accessibility_on">On</string>
	<string name="accessibility_off">Off</string>
	<string name="accessibility_default">According to the global system setting</string>
	<string name="backToMenu">Back To Menu</string>
	<string name="zoomOut">Zoom out</string>
	<string name="zoomIn">Zoom in</string>
	<string name="zoomIs">Zoom is</string>
	<string name="north">north</string>
	<string name="north_north_east">north-north-east</string>
	<string name="north_east">north-east</string>
	<string name="east_north_east">east-north-east</string>
	<string name="east">east</string>
	<string name="east_south_east">east-south-east</string>
	<string name="south_east">south-east</string>
	<string name="south_south_east">south-south-east</string>
	<string name="south">south</string>
	<string name="south_south_west">south-south-west</string>
	<string name="south_west">south-west</string>
	<string name="west_south_west">west-south-west</string>
	<string name="west">west</string>
	<string name="west_north_west">west-north-west</string>
	<string name="north_west">north-west</string>
	<string name="north_north_west">north-north-west</string>
	<string name="front">Front</string>
	<string name="front_right">Front right</string>
	<string name="right">Right</string>
	<string name="back_right">Back right</string>
	<string name="back">Back</string>
	<string name="back_left">Back left</string>
	<string name="left">Left</string>
	<string name="front_left">Front left</string>
	<string name="oclock">o\'clock</string>
	<string name="towards">towards</string>
	<string name="accuracy">Accuracy</string>
	<string name="altitude">Altitude</string>
	<string name="no_info">No info</string>
	<string name="direction_style_sidewise">Sidewise (8 sectors)</string>
	<string name="direction_style_clockwise">Clockwise (12 sectors)</string>
	<string name="settings_direction_style">Direction style</string>
	<string name="settings_direction_style_descr">Choose style to express relative directions while moving</string>
	<string name="auto_announce_on">Start autoannouncing</string>
	<string name="auto_announce_off">Stop autoannouncing</string>
	<string name="scroll_map_by_gestures_descr">Scroll map by gestures on the touchscreen</string>
	<string name="scroll_map_by_gestures">Natural map scrolling</string>
	<string name="i_am_here">I am here</string>
	<string name="zoom_by_trackball_descr">Change map zooming by horizontal trackball moves</string>
	<string name="zoom_by_trackball">Use trackball for zoom control</string>
	<string name="use_short_object_names_descr">Use short object names in touch exploration mode</string>
	<string name="use_short_object_names">Use object names</string>
	<string name="accessibility_preferences_descr">Accessibility related preferences</string>
	<string name="accessibility_preferences">Accessibility</string>
	<string name="rendering_out_of_memory">Not enough process memory to display selected area</string>
	<string name="use_fluorescent_overlays">Fluorescent overlays</string>
	<string name="use_fluorescent_overlays_descr">Use fluorescent colors to display tracks and routes</string>
	<string name="offline_poi_edition">Offline POI editing</string>
	<string name="offline_poi_edition_descr">Always use offline POI editing</string>
	<string name="tip_recent_changes_0_7_1_t">Changes in 0.7.1 :
\n\t- Offline POI editing 
\n\t- Live Tracking option - send coordinates to web service periodically (read how to setup your own web service in HowTo Articles)
\n\t- Show currently recorded track on map
\n\t- Direction detection: \'Make U-turn\' is indicated and announced when heading in opposite direction or after missing a turn
\n\t- New voice prompt \'Route recalculated\'
\n\t- Optical indication of an imminent turn within 100m by diretion arrow changing color
\n\t- Actuality also of deactivated index files now shown on Download screen in dark green and dark blue
\n\t- Other changes
	</string>
	<string name="update_poi_does_not_change_indexes">POI changes inside application do not affect downloaded map files, changes are saved to local file instead.</string>
	<string name="local_openstreetmap_uploading_poi">Uploading POI…</string>
	<string name="local_openstreetmap_poi_were_uploaded">{0} POI were uploaded</string>
	<string name="local_openstreetmap_uploadall">Upload all POI</string>
	<string name="local_openstreetmap_items"></string>
	<string name="local_openstreetmap_show_poi">Show POI on map</string>
	<string name="local_openstreetmap_upload">Upload modification to OSM</string>
	<string name="local_openstreetmap_delete">Delete POI modification</string>
	<string name="local_openstreetmap_descr_title">Asynchronous OSM POI Editing:</string>
	<string name="local_openstreetmap_settings">Locally saved OSM POIs</string>
	<string name="local_openstreetmap_settings_descr">Show and manage OSM POIs noted in local database</string>
	<string name="live_monitoring_descr">Send tracking to a specified web service</string>
	<string name="live_monitoring">Online Live Tracking</string>
	<string name="live_monitoring_interval_descr">Specify Live Tracking interval</string>
	<string name="live_monitoring_interval">Live Tracking interval</string>
	<string name="live_monitoring_url_descr">Specify the web address with parameter syntax : lat={0}, lon={1}, timestamp={2}, hdop={3}, altitude={4}, speed={5}</string>
	<string name="live_monitoring_url">Live Tracking web address</string>
	<string name="gpx_monitoring_disabled_warn">Please enable \'Log track to GPX\' Tracking settings</string>
	<string name="show_current_gpx_title">Show current track</string>
	<string name="tip_recent_changes_0_7_0_t">Changes in 0.7.0 :
	\n\t- Offline wikipedia data with articles
	\n\t- Updated maps
	\n\t- Other small features
	</string>
	<string name="free_version_message">This free nogago Maps version is limited to %1$s downloads %2$s and does not support offline wikipedia articles.</string>
	<string name="free_version_title">Free version</string>
	<string name="poi_context_menu_showdescription">Show POI description</string>
	<string name="index_name_north_america">North America</string>
	<string name="index_name_us">North America - United States</string>
	<string name="index_name_central_america">Central America</string>
	<string name="index_name_south_america">South America</string>
	<string name="index_name_europe">Europe</string>
	<string name="index_name_france">Europe - France</string>
	<string name="index_name_germany">Europe - Germany</string>
	<string name="index_name_russia">Europe/Asia - Russia</string>
	<string name="index_name_africa">Africa</string>
	<string name="index_name_asia">Asia</string>
	<string name="index_name_oceania">Oceania</string>
	<string name="index_name_other">Worldwide and topic maps</string>
	<string name="index_name_wiki">Worldwide Wikipedia</string>
	<string name="index_name_voice">Voice packs (recorded)</string>
	<string name="index_name_tts_voice">Voice packs (TTS)</string>
	<string name="amenity_type_wikiosm">Wikipedia (offline)</string>
	<string name="amenity_type_user_defined">User defined</string>
	<string name="fav_export_confirmation">File with previously exported favorites already exists. Do you want to replace it?</string>
	<string name="profile_settings">Navigation- and Mapsettings</string>
	<string name="settings_preset">User Profile</string>
	<string name="settings_preset_descr">Select a user profile. Each profile contains specific settings, which can be customized below.</string>
	<string name="rendering_settings">- Map configuration</string>
	<string name="rendering_settings_descr">Configure maps and map sources</string>
	<string name="appearance_settings">- Map appearance</string>
	<string name="appearance_settings_descr">Configure map display</string>
	<string name="monitor_preferences">- Tracking</string>
	<string name="monitor_preferences_descr">Specify tracking settings</string>
	<string name="routing_settings">- Navigation</string>
	<string name="routing_settings_descr">Specify navigation options</string>
	<string name="global_settings">Global Settings</string>
	<string name="index_settings">Offline Data</string>
	<string name="index_settings_descr">Download and manage offline maps and other data such as GPX tracks</string>
	<string name="general_settings">General Settings</string>
	<string name="general_settings_descr">Configure global settings</string>
	<string name="global_app_settings">Global app settings</string>
	<string name="user_name">Your OSM user name</string>
	<string name="user_name_descr">Needed for openstreetmap.org submissions</string>
	<string name="user_password">Your OSM password</string>
	<string name="user_password_descr">Needed for openstreetmap.org submissions</string>
	<string name="osmand_service">Background settings</string>
	<string name="osmand_service_descr">Use to run nogago Maps while screen is off</string>
	<string name="tip_rotation_switching">Map Orientation</string>
	<string name="tip_rotation_switching_t">\tYou can choose whether and how the map display is rotated in \'Settings\' -> \'Map appearance\' -> \'Map rotation\'.
	\n\tThe choices are:
	\n\t\'Don\'t rotate\' - Map will not be rotated. North will be always up
	\n\t\'To direction of movement\' - Map will continuously be aligned with your heading
	\n\t\'To compass\' - Map will continuously be aligned with device compass reading
	\n\tHint: To quickly change between rotation by compass and the one you selected in settings, you can simply tap on the compass needle in map view.</string>
	<string name="switch_to_raster_map_to_see">No offline vector map present for this location.\n\t\n\tYou can download one in \'Settings\' -> \'Offline data\', or switch to online maps via \'Settings\' -> \'Map configuration\'.</string>
	<string name="menu_layers">Define view</string>
	<string name="where_am_i">Where am I?</string>
	<string name="menu_mute_off">Sound is on</string>
	<string name="close">Close</string>
    <string name="stop_navigation">Clear destin.</string>
<string name="map_Button">Map</string>
<string name="settings_Button">Settings</string>
<string name="favorites_Button">Favorites</string>
<string name="search_button">Search</string>
<string name="mapManager_Button">Map download</string>
<string name="navigation_Button">Navigation</string>
<string name="toTracks_Button">Record a Track</string>
    <string name="menu_map_favorites">Manage Favorites</string>
    <string name="menu_map_download">Manage Offline Maps</string>
</resources>