<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/map_where_am_i"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="1"
        android:title="@string/where_am_i"
        android:visible="false"
        yourapp:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/map_layers"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:orderInCategory="2"
        android:title="@string/menu_layers"
        yourapp:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/map_specify_point"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="3"
        android:title="@string/search_button"
        yourapp:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/map_show_dld_mgr"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="5"
        android:title="@string/menu_map_download"
        yourapp:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/map_show_favorites"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:orderInCategory="6"
        android:title="@string/menu_map_favorites"
        yourapp:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/map_show_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="7"
        android:title="@string/settings_Button"
        yourapp:showAsAction="ifRoom|withText">
    </item>

    <!-- not visible by default -->
    <item
        android:id="@+id/map_navigate_to_point"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="4"
        android:title="@string/stop_navigation"
        android:visible="true"
        yourapp:showAsAction="ifRoom|withText">
    </item>
    <item
        android:id="@+id/map_mute"
        android:orderInCategory="6"
        android:title="@string/menu_mute_off"
        android:visible="false"
        yourapp:showAsAction="ifRoom|withText">
    </item>
    <!--
    <item
        android:id="@+id/map_animate_route"
        android:orderInCategory="7"
        android:title="@string/animate_route"
        android:visible="false"
        yourapp:showAsAction="ifRoom|withText">
    </item>

        <item
            android:id="@+id/map_get_directions"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/get_directions">
        </item>
        <item
            android:id="@+id/map_show_gps_status"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/show_gps_status">
        </item>
        <item
            android:id="@+id/map_show_point_options"
            android:title="@string/show_point_options">
        </item>
    -->

</menu>